--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         volumes: 
          - ./mongo-volume:/data/db
          - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+        command: --quiet
     app:
         build: .
         ports: 
